[package]
name = "rust-ai-azure-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }

rust-ai = {path = "../rust-ai", version = "0.1.*"}
chrono = "0.4.24"

[[bin]]
name = "azure-bootstrap"
path = "src/main.rs"
