[package]
name = "rust-ai-generator"
authors = ["Zhongdong Yang"]
description = "A tool to generate types for `rust-ai`"
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dongsxyz/rust-ai/"
homepage = "https://github.com/dongsxyz/rust-ai/"
include = ["/src"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
reqwest = { version = "0.11.17", features = ["json", "multipart"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1.28.1", features = ["full"] }

[[bin]]
name = "rsai-generator"
path = "src/main.rs"
