[package]
name = "rust-ai"
authors = ["Zhongdong Yang"]
description = "A collection of 3rd-party AI APIs for Rust"
version = "0.1.22"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dongsxyz/rust-ai/"
homepage = "https://github.com/dongsxyz/rust-ai/"
include = ["/src", "/log4rs.yml"]
readme = "README.md"
documentation = "https://docs.rs/rust-ai"
categories = ["text-processing", "api-bindings"]
keywords = ["openai-api", "ai-api"]


[lib]
crate-type = ["lib"]
name = "rust_ai"

[[bin]]
name = "rsai"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.24", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.20"
log4rs = "1.3.0"
serde_with = "3.6.1"
isolang = { version = "2.4.0", features = ["serde"] }
lazy_static = "1.4.0"
urlencoding = "2.1.3"
regex = "1.10.3"
