[package]
name = "rust-ai-azure-examples"
edition = "2021"
version = "0.1.0"

[dependencies]
rust-ai = { path = "../../rust-ai" }
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4.17"
log4rs = "1.2.0"

[[bin]]
name = "azure-text-to-speech"
path = "src/text-to-speech.rs"

[[bin]]
name = "azure-batch-create-transcription"
path = "src/batch-create-transcription.rs"